# AIA_LP-2025

./: Blackjack.docx  Cod fisier c++ pclp2.txt  DOCUMENTATIE PCLP2 ALDEA ROBERT.docx  Documentatie Pclp..docx  Documentatie pclp2.doc  Exercitiul5.cpp  Exercitiul6.c  Exercitiul7.c  JAVA lab 1 tema  LAB9.2.c  Lab 2 Ex 6.c  Lab 2 ex 5.cpp  Lab 2 ex 7.c  Lab 3 ex 4.1.c  Lab 3 ex 4.2.c  Lab 3 ex 4.3.c  Lab 3 ultimul ex  Lab7_ex1.1.c  Lab7_ex1.cpp  Lab7_ex3.1.cpp  Lab7_ex3.c  Laborator 2 ex 5.cpp  Laborator 2-problema5  Laborator 5 ex 4.c  Laborator2_ex5.cpp  Laborator2_ex6.c  Laborator2_ex7.c  Laborator3_4.1.c  Laborator3_4.2.c  Laborator3_ex4.3.c  Laborator4_ex1.c  Laborator4_ex2.c  Laborator4_ex3.c  Laborator4_ex4.c  Laboratorul5_ex1.c  Laboratorul5_ex2.c  Laboratorul5_ex2.cpp  Laboratorul5_ex3.c  Laboratorul5_ex5.c  Link pentru descărcare proiect (SI - WIB).txt  (+66 more)
Boza Silviu tema/: tema lab5.txt  tema lab9.txt
C_files/: ex1.cpp  ex3.c
Calculator ROZ/: CalculatorExpresii.pro  Proiect la PCLP 2  Calculator ROZ.docx  appicon.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+1 more)
Proiect/: CMakeLists.txt  Casino.cpp  Casino.h  Cod  Deck_Of_Cards.cpp  Deck_Of_Cards.h  DocumentatiePCLP.docx  Documentatie_Sarcini.docx  Jobs.cpp  Jobs.h  QualityTools.cpp  QualityTools.h  Shop.cpp  Shop.h  Story.cpp  Story.h  Study.cpp  Study.h  Trofinenco_Adrian-Razvan_proiect_java.docx  User.cpp  User.h  documentatie sarcini.docx  main.cpp
Proiect/proiect_java/: hello.txt
Proiect/proiect_java/src/: module-info.java
Proiect/proiect_java/src/proiect_java/: proiect_java.java
(+1256 files in other folders)
